# FatturaAnalyzer-v2

./: create.py  project_snapshot.txt  resume.py
FatturaAnalyzer-v2/: .env  .env.example  .gitignore  README.md  package.json
FatturaAnalyzer-v2/backend/: Dockerfile  Makefile  config.ini  docker-compose.yml  pytest.ini  requirements.txt  run.py
FatturaAnalyzer-v2/backend/app/: __init__.py  config.py  main.py
FatturaAnalyzer-v2/backend/app/adapters/: __init__.py  analytics_adapter.py  cloud_sync_adapter.py  database_adapter.py  importer_adapter.py  reconciliation_adapter.py
FatturaAnalyzer-v2/backend/app/api/: __init__.py  anagraphics.py  analytics.py  first_run.py  health.py  import_export.py  invoices.py  reconciliation.py  setup.py  sync.py  system.py  transactions.py
FatturaAnalyzer-v2/backend/app/core/: __init__.py  ai_engine.py  (+10 more)
FatturaAnalyzer-v2/backend/scripts/: backup_db.py  fix_setup_complete.py  force_setup.py  force_wizard.py  generate_sample_data.py  setup_db.py  start_dev.py  test_import_tool.py  test_reconciliation_tool.py  test_runner.py
FatturaAnalyzer-v2/backend/tests/: conftest.py  debugxml.py  textxml.py
FatturaAnalyzer-v2/docs/: API.md  DEPLOYMENT.md  SETUP.md
FatturaAnalyzer-v2/frontend/: .env.local  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
FatturaAnalyzer-v2/frontend/src/: App.tsx  AppWrapper.tsx  global.css  main.tsx
FatturaAnalyzer-v2/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
FatturaAnalyzer-v2/src-tauri/src/: commands.rs  lib.rs  main.rs
(+105 files in other folders)
