[package]
name = "fatturaanalyzer_v2_desktop"
version = "0.1.0"
description = "Desktop application for FatturaAnalyzer v2"
authors = ["Il Tuo Nome Qui"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = ["shell-open", "http-all", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
